--- a/src/LBF/MainBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.es.yml
@@ -69,7 +69,7 @@ ourProducts:
         weight:                 "Peso:"
         price:                  "Precio:"
         for:                    "para "
-        piece:                  " pedazo(s)"
+        piece:                  " unidad(es)"
         naturalProducts:        "Producto natural sin colorantes ni preservantes"
         pieces:                 "pedazos,"
     announces:
