--- a/src/LBF/MainBundle/Resources/translations/messages.en.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.en.yml
@@ -28,7 +28,7 @@ sideButtons:
 main:
     titles:
         title_meat: 			New flavors son your table.
-        title_meat_s: 			Safe trip in our French culinary univers 
+        title_meat_s: 			Safe trip in our French culinary univers!
         recipes: 		        Our appetizing recipes
         qualityProduct: 		Quality products
         securedPayment: 		Secured payment
