--- a/src/LBF/MainBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.es.yml
@@ -28,7 +28,7 @@ sideButtons:
 main:
     titles:
         title_meat: 			Nuevos sabores sobre tu mesa
-        title_meat_s: 			Buen viaje en nuestro universo culinario francés
+        title_meat_s: 			¡Buen viaje en nuestro universo culinario francés!
         recipes: 		        Recetas apetitosas
         qualityProduct: 		Qualitad de producto
         securedPayment: 		Pagamento securo
