--- a/src/LBF/MainBundle/Resources/translations/messages.fr.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.fr.yml
@@ -28,7 +28,7 @@ sideButtons:
 main:
     titles:
         title_meat: 			De nouvelles saveurs sur votre table
-        title_meat_s: 			Bon voyage dans notre univers culinaire français
+        title_meat_s: 			Bon voyage dans notre univers culinaire français !
         recipes: 		        Nos recettes
         qualityProduct: 		Produit de qualité
         securedPayment: 		Paiment sécurisé
